--- a/references.bib
+++ b/references.bib
@@ -146,6 +146,19 @@
   file = {C:\Users\shaun\Zotero\storage\WGFFILE4\Dvorakova et al. - 2021 - Sentinel-2 Exposed Soil Composite for Soil Organic.pdf}
 }
 
+@online{earthsciencedatasystemsActiveSensorsEarthdata2021,
+  type = {Backgrounder},
+  title = {Active {{Sensors}} | {{Earthdata}}},
+  author = {family=Earth Science Data Systems, given=NASA, given-i=NASA},
+  date = {2021-01-29},
+  publisher = {Earth Science Data Systems, NASA},
+  url = {https://www.earthdata.nasa.gov/learn/backgrounders/active-sensors},
+  urldate = {2024-03-16},
+  abstract = {Information about active sensors used for NASA EOSDIS remote sensing of Earth science data.},
+  langid = {english},
+  file = {C:\Users\shaun\Zotero\storage\9RDKQWYL\active-sensors.html}
+}
+
 @online{earthsciencedatasystemsWhatRemoteSensing2019,
   type = {Backgrounder},
   title = {What Is {{Remote Sensing}}? | {{Earthdata}}},
@@ -324,6 +337,26 @@
   file = {C:\Users\shaun\Zotero\storage\RBVSYWNC\how-lidar-is-used-in-disaster-response.html}
 }
 
+@article{huangLandCoverClassification2023,
+  title = {Land {{Cover Classification}} of {{SAR Based}} on {{1DCNN-MRF Model Using Improved Dual-Polarization Radar Vegetation Index}}},
+  author = {Huang, Yabo and Meng, Mengmeng and Hou, Zhuoyan and Wu, Lin and Guo, Zhengwei and Shen, Xiajiong and Zheng, Wenkui and Li, Ning},
+  date = {2023-01},
+  journaltitle = {Remote Sensing},
+  volume = {15},
+  number = {13},
+  pages = {3221},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  issn = {2072-4292},
+  doi = {10.3390/rs15133221},
+  url = {https://www.mdpi.com/2072-4292/15/13/3221},
+  urldate = {2024-03-16},
+  abstract = {Accurate land cover classification (LCC) is essential for studying global change. Synthetic aperture radar (SAR) has been used for LCC due to its advantage of weather independence. In particular, the dual-polarization (dual-pol) SAR data have a wider coverage and are easier to obtain, which provides an unprecedented opportunity for LCC. However, the dual-pol SAR data have a weak discrimination ability due to limited polarization information. Moreover, the complex imaging mechanism leads to the speckle noise of SAR images, which also decreases the accuracy of SAR LCC. To address the above issues, an improved dual-pol radar vegetation index based on multiple components (DpRVIm) and a new LCC method are proposed for dual-pol SAR data. Firstly, in the DpRVIm, the scattering information of polarization and terrain factors were considered to improve the separability of ground objects for dual-pol data. Then, the Jeffries-Matusita (J-M) distance and one-dimensional convolutional neural network (1DCNN) algorithm were used to analyze the effect of difference dual-pol radar vegetation indexes on LCC. Finally, in order to reduce the influence of the speckle noise, a two-stage LCC method, the 1DCNN-MRF, based on the 1DCNN and Markov random field (MRF) was designed considering the spatial information of ground objects. In this study, the HH-HV model data of the Gaofen-3 satellite in the Dongting Lake area were used, and the results showed that: (1) Through the combination of the backscatter coefficient and dual-pol radar vegetation indexes based on the polarization decomposition technique, the accuracy of LCC can be improved compared with the single backscatter coefficient. (2) The DpRVIm was more conducive to improving the accuracy of LCC than the classic dual-pol radar vegetation index (DpRVI) and radar vegetation index (RVI), especially for farmland and forest. (3) Compared with the classic machine learning methods K-nearest neighbor (KNN), random forest (RF), and the 1DCNN, the designed 1DCNN-MRF achieved the highest accuracy, with an overall accuracy (OA) score of 81.76\% and a Kappa coefficient (Kappa) score of 0.74. This study indicated the application potential of the polarization decomposition technique and DEM in enhancing the separability of different land cover types in SAR LCC. Furthermore, it demonstrated that the combination of deep learning networks and MRF is suitable to suppress the influence of speckle noise.},
+  issue = {13},
+  langid = {english},
+  keywords = {deep learning,DpRVI<sub>m</sub>,feature combination,land cover classification,MRF,synthetic aperture radar (SAR)},
+  file = {C:\Users\shaun\Zotero\storage\AJMDB9FJ\Huang et al. - 2023 - Land Cover Classification of SAR Based on 1DCNN-MR.pdf}
+}
+
 @online{HuttonSoilScientists,
   title = {Hutton Soil Scientists Help Develop First {{Global Soil Organic Carbon Map}} | {{The James Hutton Institute}}},
   url = {https://www.hutton.ac.uk/news/hutton-soil-scientists-help-develop-first-global-soil-organic-carbon-map},
@@ -336,6 +369,25 @@
   url = {https://nisar.jpl.nasa.gov/mission/get-to-know-sar/interferometry/},
   urldate = {2024-03-12},
   file = {C:\Users\shaun\Zotero\storage\H8MH3MBY\interferometry.html}
+}
+
+@article{jansenLanduseDataCollection2003,
+  title = {Land-Use Data Collection Using the “Land Cover Classification System”: Results from a Case Study in {{Kenya}}},
+  shorttitle = {Land-Use Data Collection Using the “Land Cover Classification System”},
+  author = {Jansen, Louisa J. M and Di Gregorio, Antonio},
+  date = {2003-04-01},
+  journaltitle = {Land Use Policy},
+  shortjournal = {Land Use Policy},
+  volume = {20},
+  number = {2},
+  pages = {131--148},
+  issn = {0264-8377},
+  doi = {10.1016/S0264-8377(02)00081-9},
+  url = {https://www.sciencedirect.com/science/article/pii/S0264837702000819},
+  urldate = {2024-03-16},
+  abstract = {This paper presents a systematic methodology to derive land-use classes from a remotely sensed data derived land cover map at a scale of 1:200,000. The aim of the study is to better understand the land cover/land-use relationship and to enhance the value of a land cover mapping product for the planning and management of natural resources and/or environmental change studies. In the case of the study, the land cover product is generated using the FAO/UNEP “land cover classification system”. The methodology is heavily determined by the spatial resolution of the satellite imagery, the classification system used and the expert knowledge of the study area. For any given land cover the associated land-uses are identified as well as the land cover/land-use relationship. It is assumed that these relations can be of four types: one to one, one to many, many to one or a combination of any of the aforementioned possibilities. The land cover/land-use relation need not be consistent across the study area. The parameters used for land-use classification are based on a comprehensive review of the literature, in which land cover and land-use are usually amalgamated. A set of decision rules was established to define land-use classes. These decision rules were tested during the field survey, after which they were applied to the whole study area. The concurrence of land cover and land-use delineations is discussed for the classes identified. The result of the study is a detailed, flexible land-use data set in which the various parameters used for classification can be re-grouped according to user needs.},
+  keywords = {Data harmonisation,Land cover classification,Land-use classification,Mapping,Standardisation},
+  file = {C:\Users\shaun\Zotero\storage\WY5XGCD2\S0264837702000819.html}
 }
 
 @article{jeanCombiningSatelliteImagery2016,
@@ -369,6 +421,24 @@
   abstract = {Cities are growing geographically in response to the enormous increase in urban population; consequently, comprehending growth and environmental changes is critical for long-term planning. Urbanization transforms naturally permeable surfaces into impermeable surfaces, causing an increase in urban land surface temperature, leading to the phenomenon known as urban heat islands. The urban heat islands are noticeable across Malaysia's rural communities and villages, particularly in Kuala Lumpur. These effects must be addressed to slow, if not halt, climate change and meet the Paris Agreement's 2030 goal. The study posits an application of thermal remote sensing utilizing a space-borne satellite-based technique to demonstrate urban evolution for urban heat island analysis and its relationship to land surface temperature. The urban heat island (UHI) was analyzed by converting infrared radiation into visible thermal images utilizing thermal imaging from remote sensing techniques. The heat island is validated by reference to the characteristics of the normalized difference vegetation index (NDVI), which define the land surface temperature (LST) of distinct locations. Based on the digital information from the satellite, the highest temperature difference between urban and rural regions for a few chosen cities in 2013 varied from 10.8 to 25.5~°C, while in 2021, it ranged from 16.1 to 26.73~°C, highlighting crucial temperature changes. The results from ANOVA test has substantially strengthened the credibility of the significant temperature changes. Some notable reveals are as follows: The Sungai Batu area, due to its rapid development and industry growth, was more vulnerable to elevated urban heat due to reduced vegetation cover; therefore, higher relative vulnerability. Contrary, the Bukit Ketumbar area, which region lies in the woodland region, experienced the lowest, with urban heat islands reading from 2013~at −0.3044 and 0.0154 in 2021. It shows that despite having urban heat islands increase two-fold from 2013 to 2021, increasing the amount of vegetation coverage is a simple and effective way of reducing the urban heat island effect, as evidenced by the low urban heat islands in the Bukit Ketumbar woodland region. The study findings are critical for advising municipal officials and urban planners to decrease urban heat islands by investing in open green spaces.},
   keywords = {GIS software,Land surface temperature,Landsat images,Urban heat island},
   file = {C\:\\Users\\shaun\\Zotero\\storage\\JJ7BTI5R\\Kasniza Jumari et al. - 2023 - Analysis of urban heat islands with landsat satell.pdf;C\:\\Users\\shaun\\Zotero\\storage\\Z3XLBXLE\\S2405844023056323.html}
+}
+
+@article{keeleGeographicBoundariesRegression2015,
+  title = {Geographic {{Boundaries}} as {{Regression Discontinuities}}},
+  author = {Keele, Luke J. and Titiunik, Rocío},
+  date = {2015},
+  journaltitle = {Political Analysis},
+  volume = {23},
+  number = {1},
+  eprint = {24572845},
+  eprinttype = {jstor},
+  pages = {127--155},
+  publisher = {[Oxford University Press, Society for Political Methodology]},
+  issn = {1047-1987},
+  url = {https://www.jstor.org/stable/24572845},
+  urldate = {2024-03-15},
+  abstract = {Political scientists often turn to natural experiments to draw causal inferences with observational data. Recently, the regression discontinuity design (RD) has become a popular type of natural experiment due to its relatively weak assumptions. We study a special type of regression discontinuity design where the discontinuity in treatment assignment is geographic. In this design, which we call the Geographic Regression Discontinuity (GRD) design, a geographic or administrative boundary splits units into treated and control areas, and analysts make the case that the division into treated and control areas occurs in an as-if random fashion. We show how this design is equivalent to a standard RD with two running variables, but we also clarify several methodological differences that arise in geographical contexts. We also offer a method for estimation of geographically located treatment effects that can also be used to validate the identification assumptions using observable pretreatment characteristics. We illustrate our methodological framework with a re-examination of the effects of political advertisements on voter turnout during a presidential campaign, exploiting the exogenous variation in the volume of presidential ads that is created by media market boundaries.},
+  file = {C:\Users\shaun\Zotero\storage\KDXRVMV2\Keele and Titiunik - 2015 - Geographic Boundaries as Regression Discontinuitie.pdf}
 }
 
 @book{kganyagoEvaluatingPerformancePixelbased2014,
@@ -409,6 +479,26 @@
   abstract = {In surveying, mapping and geographic information systems, building extraction from remote sensing imagery is a common task. However, there are still some challenges in automatic building extraction. First, using only single-scale depth features cannot take into account the uncertainty of features such as the hue and texture of buildings in images, and the results are prone to missed detection. Moreover, extracted high-level features often lose structural information and have scale differences with low-level features, which results in less accurate extraction of boundaries. To simultaneously address these problems, we propose pyramid feature extraction (PFE) to construct multi-scale representations of buildings, which is inspired by the feature extraction of scale-invariant feature transform. We also apply attention modules in channel dimension and spatial dimension to PFE and low-level feature maps. Furthermore, we use the structural-cue-guided feature alignment module to learn the correlation between feature maps at different levels, obtaining high-resolution features with strong semantic representation and ensuring the integrity of high-level features in both structural and semantic dimensions. An edge loss is applied to get a highly accurate building boundary. For the WHU Building Dataset, our method achieves an F1 score of 95.3\% and an Intersection over Union (IoU) score of 90.9\%; for the Massachusetts Buildings Dataset, our method achieves an F1 score of 85.0\% and an IoU score of 74.1\%.},
   keywords = {Building extraction,Convolutional neural network (convNet),Structural-cue-guided feature alignment},
   file = {C:\Users\shaun\Zotero\storage\WTSQ3ZRK\S1569843222001637.html}
+}
+
+@article{liUrbanBuildingChange2019,
+  title = {Urban {{Building Change Detection}} in {{SAR Images Using Combined Differential Image}} and {{Residual U-Net Network}}},
+  author = {Li, Lu and Wang, Chao and Zhang, Hong and Zhang, Bo and Wu, Fan},
+  date = {2019-01},
+  journaltitle = {Remote Sensing},
+  volume = {11},
+  number = {9},
+  pages = {1091},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  issn = {2072-4292},
+  doi = {10.3390/rs11091091},
+  url = {https://www.mdpi.com/2072-4292/11/9/1091},
+  urldate = {2024-03-16},
+  abstract = {With the rapid development of urbanization in China, monitoring urban changes is of great significance to city management, urban planning, and cadastral map updating. Spaceborne synthetic aperture radar (SAR) sensors can capture a large area of radar images quickly with fine spatiotemporal resolution and are not affected by weather conditions, making multi-temporal SAR images suitable for change detection. In this paper, a new urban building change detection method based on an improved difference image and residual U-Net network is proposed. In order to overcome the intensity compression problem of the traditional log-ratio method, the spatial distance and intensity similarity are combined to generate a weighting function to obtain a weighted difference image. By fusing the weighted difference image and the bitemporal original images, the three-channel color difference image is generated for building change detection. Due to the complexity of urban environments and the small scale of building changes, the residual U-Net network is used instead of fixed statistical models and the construction and classifier of the network are modified to distinguish between different building changes. Three scenes of Sentinel-1 interferometric wide swath data are used to validate the proposed method. The experimental results and comparative analysis show that our proposed method is effective for urban building change detection and is superior to the original U-Net and SVM method.},
+  issue = {9},
+  langid = {english},
+  keywords = {color difference image,residual U-Net,synthetic aperture radar (SAR),urban building change detection,weighted function},
+  file = {C:\Users\shaun\Zotero\storage\UXGN4V8D\Li et al. - 2019 - Urban Building Change Detection in SAR Images Usin.pdf}
 }
 
 @book{lovelaceChapter12Statistical2019,
@@ -768,6 +858,44 @@
   file = {C\:\\Users\\shaun\\Zotero\\storage\\HCK76AK5\\Shahtahmassebi et al. - 2021 - Remote sensing of urban green spaces A review.pdf;C\:\\Users\\shaun\\Zotero\\storage\\E6RPASW2\\S1618866720307639.html}
 }
 
+@article{shaoEmergingIssuesMapping2023,
+  title = {Emerging {{Issues}} in {{Mapping Urban Impervious Surfaces Using High-Resolution Remote Sensing Images}}},
+  author = {Shao, Zhenfeng and Cheng, Tao and Fu, Huyan and Li, Deren and Huang, Xiao},
+  date = {2023-01},
+  journaltitle = {Remote Sensing},
+  volume = {15},
+  number = {10},
+  pages = {2562},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  issn = {2072-4292},
+  doi = {10.3390/rs15102562},
+  url = {https://www.mdpi.com/2072-4292/15/10/2562},
+  urldate = {2024-03-16},
+  abstract = {Urban impervious surface (UIS) is a key parameter in climate change, environmental change, and sustainability. UIS extraction has been evolving rapidly in the past decades. However, high-resolution impervious surface mapping is a long-term need. There is an urgent requirement for impervious surface mapping from high-resolution remote sensing imagery. In this paper, we compare current extraction methods in terms of extraction units and extraction models and summarize their strengths and limitations. We discuss the challenges in impervious surface estimation from high spatial resolution remote sensing imagery in terms of selection of spatial resolution, spectral band, and extraction method. The uncertainties caused by clouds and snow, shadows, and vegetation occlusion are also analyzed. Automated sample labeling and remote sensing domain knowledge are the main directions in impervious surface extraction using deep learning methods. We should also focus on using continuous time series of high-resolution imagery and multi-source satellite imagery for dynamic monitoring of impervious surfaces.},
+  issue = {10},
+  langid = {english},
+  keywords = {impervious surface estimation,remote sensing,urban mapping issues},
+  file = {C:\Users\shaun\Zotero\storage\7B788XU5\Shao et al. - 2023 - Emerging Issues in Mapping Urban Impervious Surfac.pdf}
+}
+
+@article{shiLandCoverClassification2020,
+  title = {Land Cover Classification Combining {{Sentinel-1}} and {{Landsat}} 8 Imagery Driven by {{Markov}} Random Field with Amendment Reliability Factors},
+  author = {Shi, Xiaofei and Deng, Zhiyu and Ding, Xing and Li, Li},
+  date = {2020-05-06},
+  journaltitle = {EURASIP Journal on Wireless Communications and Networking},
+  shortjournal = {EURASIP Journal on Wireless Communications and Networking},
+  volume = {2020},
+  number = {1},
+  pages = {87},
+  issn = {1687-1499},
+  doi = {10.1186/s13638-020-01713-5},
+  url = {https://doi.org/10.1186/s13638-020-01713-5},
+  urldate = {2024-03-16},
+  abstract = {Reliability factors in Markov random field (MRF) could be used to improve classification performance for synthetic aperture radar (SAR) and optical images; however, insufficient utilization of reliability factors based on characteristics of different sources leaves more room for classification improvement. To solve this problem, a Markov random field (MRF) with amendment reliability factors classification algorithm (MRF-ARF) is proposed. The ARF is constructed based on the coarse label field of urban region, and different controlling factors are utilized for different sensor data. Then, ARF is involved into the data energy of MRF, to classify the sand, vegetation, farmland, and urban regions, with the gray level co-occurrence matrix textures of Sentinel-1 imagery and the spectral values of the Landsat 8 imagery. In the experiments, Sentinel-1 and Landsat-8 images are used with overall accuracy and Kappa coefficient to evaluate the proposed algorithm with other algorithms. Results show that the overall accuracy of the proposed algorithm has the superiority of about 20\% in overall precision and at least 0.2 in Kappa coefficient than the comparison algorithms. Thus, the problem of insufficient utilization of different sensors data could be solved.},
+  keywords = {Amendment reliability factors,Classification,Markov random field,Optical image,SAR image},
+  file = {C\:\\Users\\shaun\\Zotero\\storage\\73VUYMRE\\Shi et al. - 2020 - Land cover classification combining Sentinel-1 and.pdf;C\:\\Users\\shaun\\Zotero\\storage\\SJSCHTCY\\s13638-020-01713-5.html}
+}
+
 @online{SoilCarbonStorage,
   title = {Soil {{Carbon Storage}} | {{Learn Science}} at {{Scitable}}},
   url = {https://www.nature.com/scitable/knowledge/library/soil-carbon-storage-84223790/},
@@ -808,6 +936,26 @@
   file = {C:\Users\shaun\Zotero\storage\CDDQNCU4\Suomalainen et al. - 2021 - Direct reflectance transformation methodology for .pdf}
 }
 
+@article{talukdarLandUseLandCoverClassification2020,
+  title = {Land-{{Use Land-Cover Classification}} by {{Machine Learning Classifiers}} for {{Satellite Observations}}—{{A Review}}},
+  author = {Talukdar, Swapan and Singha, Pankaj and Mahato, Susanta and Shahfahad and Pal, Swades and Liou, Yuei-An and Rahman, Atiqur},
+  date = {2020-01},
+  journaltitle = {Remote Sensing},
+  volume = {12},
+  number = {7},
+  pages = {1135},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  issn = {2072-4292},
+  doi = {10.3390/rs12071135},
+  url = {https://www.mdpi.com/2072-4292/12/7/1135},
+  urldate = {2024-03-16},
+  abstract = {Rapid and uncontrolled population growth along with economic and industrial development, especially in developing countries during the late twentieth and early twenty-first centuries, have increased the rate of land-use/land-cover (LULC) change many times. Since quantitative assessment of changes in LULC is one of the most efficient means to understand and manage the land transformation, there is a need to examine the accuracy of different algorithms for LULC mapping in order to identify the best classifier for further applications of earth observations. In this article, six machine-learning algorithms, namely random forest (RF), support vector machine (SVM), artificial neural network (ANN), fuzzy adaptive resonance theory-supervised predictive mapping (Fuzzy ARTMAP), spectral angle mapper (SAM) and Mahalanobis distance (MD) were examined. Accuracy assessment was performed by using Kappa coefficient, receiver operational curve (RoC), index-based validation and root mean square error (RMSE). Results of Kappa coefficient show that all the classifiers have a similar accuracy level with minor variation, but the RF algorithm has the highest accuracy of 0.89 and the MD algorithm (parametric classifier) has the least accuracy of 0.82. In addition, the index-based LULC and visual cross-validation show that the RF algorithm (correlations between RF and normalised differentiation water index, normalised differentiation vegetation index and normalised differentiation built-up index are 0.96, 0.99 and 1, respectively, at 0.05 level of significance) has the highest accuracy level in comparison to the other classifiers adopted. Findings from the literature also proved that ANN and RF algorithms are the best LULC classifiers, although a non-parametric classifier like SAM (Kappa coefficient 0.84; area under curve (AUC) 0.85) has a better and consistent accuracy level than the other machine-learning algorithms. Finally, this review concludes that the RF algorithm is the best machine-learning LULC classifier, among the six examined algorithms although it is necessary to further test the RF algorithm in different morphoclimatic conditions in the future.},
+  issue = {7},
+  langid = {english},
+  keywords = {artificial neural network,Earth observations,land use/land cover (LULC),machine learning algorithm,random forest},
+  file = {C:\Users\shaun\Zotero\storage\I2N4J2H5\Talukdar et al. - 2020 - Land-Use Land-Cover Classification by Machine Lear.pdf}
+}
+
 @article{tamiminiaGoogleEarthEngine2020,
   title = {Google {{Earth Engine}} for Geo-Big Data Applications: {{A}} Meta-Analysis and Systematic Review},
   shorttitle = {Google {{Earth Engine}} for Geo-Big Data Applications},
@@ -824,6 +972,25 @@
   abstract = {Google Earth Engine (GEE) is a cloud-based geospatial processing platform for large-scale environmental monitoring and analysis. The free-to-use GEE platform provides access to (1) petabytes of publicly available remote sensing imagery and other ready-to-use products with an explorer web app; (2) high-speed parallel processing and machine learning algorithms using Google’s computational infrastructure; and (3) a library of Application Programming Interfaces (APIs) with development environments that support popular coding languages, such as JavaScript and Python. Together these core features enable users to discover, analyze and visualize geospatial big data in powerful ways without needing access to supercomputers or specialized coding expertise. The development of GEE has created much enthusiasm and engagement in the remote sensing and geospatial data science fields. Yet after a decade since GEE was launched, its impact on remote sensing and geospatial science has not been carefully explored. Thus, a systematic review of GEE that can provide readers with the “big picture” of the current status and general trends in GEE is needed. To this end, the decision was taken to perform a meta-analysis investigation of recent peer-reviewed GEE articles focusing on several features, including data, sensor type, study area, spatial resolution, application, strategy, and analytical methods. A total of 349 peer-reviewed articles published in 146 different journals between 2010 and October 2019 were reviewed. Publications and geographical distribution trends showed a broad spectrum of applications in environmental analyses at both regional and global scales. Remote sensing datasets were used in 90\% of studies while 10\% of the articles utilized ready-to-use products for analyses. Optical satellite imagery with medium spatial resolution, particularly Landsat data with an archive exceeding 40~years, has been used extensively. Linear regression and random forest were the most frequently used algorithms for satellite imagery processing. Among ready-to-use products, the normalized difference vegetation index (NDVI) was used in 27\% of studies for vegetation, crop, land cover mapping and drought monitoring. The results of this study confirm that GEE has and continues to make substantive progress on global challenges involving process of geo-big data.},
   keywords = {Cloud-based platform,Environmental monitoring,Geo-big data,Geospatial,Google Earth Engine,Machine learning,Planetary-scale,Remote sensing},
   file = {C:\Users\shaun\Zotero\storage\BN3VQ3JZ\S0924271620300927.html}
+}
+
+@incollection{thekkanUnderstandingBlueGreenInfrastructure2022,
+  title = {Understanding {{Blue-Green Infrastructure Through Spatial Maps}}: {{Contribution}} of {{Remote Sensing}} and {{GIS Technology}}},
+  shorttitle = {Understanding {{Blue-Green Infrastructure Through Spatial Maps}}},
+  booktitle = {Blue-{{Green Infrastructure Across Asian Countries}}: {{Improving Urban Resilience}} and {{Sustainability}}},
+  author = {Thekkan, Akhil Francis and George, Anjaly and Prasad, P. Rama Chandra and Joseph, Shijo},
+  editor = {Dhyani, Shalini and Basu, Mrittika and Santhanam, Harini and Dasgupta, Rajarshi},
+  date = {2022},
+  pages = {123--138},
+  publisher = {Springer},
+  location = {Singapore},
+  doi = {10.1007/978-981-16-7128-9_6},
+  url = {https://doi.org/10.1007/978-981-16-7128-9_6},
+  urldate = {2024-03-16},
+  abstract = {Understanding the spatiotemporal distribution of blue-green infrastructures in urban environment is a critical element in the landscape-level planning. Asian cities, which are rapidly undergoing transformational changes in its land cover, predominantly feature urban signatures at the expenses of natural ecosystems. The rapid urbanization in conjunction with mega developmental projects and industrialization requires sophisticated analytical tools in the synoptic assessments and impact measurements. Remote sensing together with geographical information system (GIS) and Global Positioning Systems (GPS) plays an important role in developing the spatial maps and assessing the dynamics of land cover in the urban environment. This chapter reviews various remote sensing instruments available to characterize vegetation and water in complex urban environments. The progress with respect to diverse instruments such as panchromatic, multispectral, hyperspectral, radar, and LiDAR in mapping the blue-green infrastructures is reviewed in this chapter. The chapter helps in understanding the diverse initiatives and instruments in mapping the extent and quality of blue-green infrastructures which are vital for the spatial planning of urban landscapes.},
+  isbn = {9789811671289},
+  langid = {english},
+  keywords = {Geoinformatics,Spatial planning,Urban environment,Vegetation cover,Water bodies}
 }
 
 @online{tutorialsInterpretingImagesAccuracy,
@@ -1015,4 +1182,53 @@
   langid = {english},
   keywords = {Landsat,multispectral,soil modeling,soil organic carbon,soil reflectance composites},
   file = {C:\Users\shaun\Zotero\storage\C9GZ5BR8\Zepp et al. - 2021 - Estimation of Soil Organic Carbon Contents in Crop.pdf}
+}
+
+@book{zhangBuildingFootprintHeight2020,
+  title = {Building {{Footprint}} and {{Height Information Extraction}} from {{Airborne LiDAR}}, {{Aerial Imagery}}, and {{Object-based Image Analysis}}},
+  author = {Zhang, Su and Han, Fei and Bogus, Susan},
+  date = {2020-03-08},
+  doi = {10.1061/9780784482865.035},
+  abstract = {Building footprint and height are critical information for urban studies and applications. Subsequently, urban planning or development departments dedicate a large amount of time and money to develop and maintain a database for building footprint and height. Currently, many methods exist for building footprint and height information extraction. However, it is still an expensive, time-consuming, and labor-intensive process to obtain this information. Recent advances in remote sensing, such as airborne LiDAR, high-spatial resolution aerial photography, and object based image analysis (OBIA) techniques, provide new methods to accurately and rapidly extract building footprint and height information at a low cost. Airborne LiDAR technology has been developed to collect detailed and accurate Earth’s surface elevation data. High-spatial resolution color infrared aerial photo can be used for vegetation detection. OBIA has been developed to accurately delineate feature boundary. Coupled with high-spatial resolution color infrared aerial photo and high-vertical accuracy airborne LiDAR data, OBIA holds the potential to detect building footprint and height accurately and rapidly. This research used airborne LiDAR data to extract objects such as buildings and trees. Then color-infrared aerial photos were used to remove trees from the detected objects. Subsequently, OBIA was used to delineate building footprints, while zonal statistics was used to extract building height information. The extracted building footprint and height information was compared to the ground-truth data, and the results revealed that color-infrared aerial photos provide important and irreplaceable information to effectively remove vegetation that being false positively detected as buildings while OBIA can be used to accurately delineate building footprint and zonal statistics can be used to extract building height information.},
+  file = {C:\Users\shaun\Zotero\storage\3MQLLBPH\Zhang et al. - 2020 - Building Footprint and Height Information Extracti.pdf}
+}
+
+@article{zhangUsingPortableActive2019,
+  title = {Using a {{Portable Active Sensor}} to {{Monitor Growth Parameters}} and {{Predict Grain Yield}} of {{Winter Wheat}}},
+  author = {Zhang, Jiayi and Liu, Xia and Liang, Yan and Cao, Qiang and Tian, Yongchao and Zhu, Yan and Cao, Weixing and Liu, Xiaojun},
+  date = {2019-01},
+  journaltitle = {Sensors},
+  volume = {19},
+  number = {5},
+  pages = {1108},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  issn = {1424-8220},
+  doi = {10.3390/s19051108},
+  url = {https://www.mdpi.com/1424-8220/19/5/1108},
+  urldate = {2024-03-16},
+  abstract = {Rapid and effective acquisition of crop growth information is a crucial step of precision agriculture for making in-season management decisions. Active canopy sensor GreenSeeker (Trimble Navigation Limited, Sunnyvale, CA, USA) is a portable device commonly used for non-destructively obtaining crop growth information. This study intended to expand the applicability of GreenSeeker in monitoring growth status and predicting grain yield of winter wheat (Triticum aestivum L.). Four field experiments with multiple wheat cultivars and N treatments were conducted during 2013–2015 for obtaining canopy normalized difference vegetation index (NDVI) and ratio vegetation index (RVI) synchronized with four agronomic parameters: leaf area index (LAI), leaf dry matter (LDM), leaf nitrogen concentration (LNC), and leaf nitrogen accumulation (LNA). Duration models based on NDVI and RVI were developed to monitor these parameters, which indicated that NDVI and RVI explained 80\%, 68–70\%, 10–12\%, and 67–73\% of the variability in LAI, LDM, LNC and LNA, respectively. According to the validation results, the relative root mean square error (RRMSE) were all {$<$}0.24 and the relative error (RE) were all {$<$}23\%. Considering the variation among different wheat cultivars, the newly normalized vegetation indices rNDVI (NDVI vs. the NDVI for the highest N rate) and rRVI (RVI vs. the RVI for the highest N rate) were calculated to predict the relative grain yield (RY, the yield vs. the yield for the highest N rate). rNDVI and rRVI explained 77–85\% of the variability in RY, the RRMSEs were both {$<$}0.13 and the REs were both {$<$}6.3\%. The result demonstrates the feasibility of monitoring growth parameters and predicting grain yield of winter wheat with portable GreenSeeker sensor.},
+  issue = {5},
+  langid = {english},
+  keywords = {active sensor,grain yield,growth parameters,vegetation index,winter wheat},
+  file = {C:\Users\shaun\Zotero\storage\LE7FF6TY\Zhang et al. - 2019 - Using a Portable Active Sensor to Monitor Growth P.pdf}
+}
+
+@article{zhouModelingResidentialLawn2008,
+  title = {Modeling {{Residential Lawn Fertilization Practices}}: {{Integrating High Resolution Remote Sensing}} with {{Socioeconomic Data}}},
+  shorttitle = {Modeling {{Residential Lawn Fertilization Practices}}},
+  author = {Zhou, Weiqi and Troy, Austin and Grove, Morgan},
+  date = {2008-05-01},
+  journaltitle = {Environmental Management},
+  shortjournal = {Environmental Management},
+  volume = {41},
+  number = {5},
+  pages = {742--752},
+  issn = {1432-1009},
+  doi = {10.1007/s00267-007-9032-z},
+  url = {https://doi.org/10.1007/s00267-007-9032-z},
+  urldate = {2024-03-16},
+  abstract = {This article investigates how remotely sensed lawn characteristics, such as parcel lawn area and parcel lawn greenness, combined with household characteristics, can be used to predict household lawn fertilization practices on private residential lands. This study involves two watersheds, Glyndon and Baisman’s Run, in Baltimore County, Maryland, USA. Parcel lawn area and lawn greenness were derived from high-resolution aerial imagery using an object-oriented classification approach. Four indicators of household characteristics, including lot size, square footage of the house, housing value, and housing age were obtained from a property database. Residential lawn care survey data combined with remotely sensed parcel lawn area and greenness data were used to estimate two measures of household lawn fertilization practices, household annual fertilizer nitrogen application amount (N\_yr) and household annual fertilizer nitrogen application rate (N\_ha\_yr). Using multiple regression with multi-model inferential procedures, we found that a combination of parcel lawn area and parcel lawn greenness best predicts N\_yr, whereas a combination of parcel lawn greenness and lot size best predicts variation in N\_ha\_yr. Our analyses show that household fertilization practices can be effectively predicted by remotely sensed lawn indices and household characteristics. This has significant implications for urban watershed managers and modelers.},
+  langid = {english},
+  keywords = {Lawn fertilization,Lawn greenness,LTER,Modeling,Object-oriented classification,Remote sensing,Socioeconomic characteristics},
+  file = {C:\Users\shaun\Zotero\storage\4BU7EEE5\Zhou et al. - 2008 - Modeling Residential Lawn Fertilization Practices.pdf}
 }
